Make sure `pre` blocks collapse when adjacent
Add a note about the Anki cloze deletion buttons problem.

--- a/source/themes/cards/simple/simple.less
+++ b/source/themes/cards/simple/simple.less
@@ -85,7 +85,9 @@
 }
 
 .simple-Sample {
-  // pass
+  pre {
+    margin: 0
+  }
 }
 
 .simple-KeyPoint {
